refactor: List.of 수정